@@ -1,0 +1,27 @@
+graft data
+graft debian
+graft images
+graft m4
+graft man
+graft po
+graft src
+
+include AUTHORS
+include billreminder
+include billreminderd
+include ChangeLog
+include CONTRIBUTORS
+include COPYING
+include COPYRIGHT
+include DONE
+include HACKING
+include INSTALL
+include LICENSE
+include MAINTAINERS
+include NEWS
+include README
+include TODO
+
+global-exclude */*~
+global-exclude */*.pyc
+global-exclude */*.svn
