@@ -1,5 +1,0 @@
-## Process this file with automake to produce Makefile.in
-
-man_MANS = billreminder.1 billreminderd.1
-
-EXTRA_DIST = $(man_MANS)
