@@ -1,11 +1,0 @@
-## Process this file with automake to produce Makefile.in
-
-SUBDIRS = daemon db gui lib
-
-billreminderdir = $(pythondir)/billreminder
-billreminder_PYTHON = \
-	__init__.py \
-	billreminder.py \
-	billreminderd.py
-
-
