@@ -1,9 +1,0 @@
-## Process this file with automake to produce Makefile.in
-
-billreminder_daemondir = $(pythondir)/billreminder/daemon
-billreminder_daemon_PYTHON = \
-	__init__.py \
-	alarm.py \
-	dbus_manager.py \
-	device.py \
-	main.py
