@@ -1,11 +1,0 @@
-## Process this file with automake to produce Makefile.in
-
-billreminder_dbdir = $(pythondir)/billreminder/db
-billreminder_db_PYTHON = \
-	__init__.py \
-	alarmstable.py \
-	billstable.py \
-	categoriestable.py \
-	fieldstable.py \
-	generictable.py \
-	versionstable.py
