@@ -1,13 +1,0 @@
-## Process this file with automake to produce Makefile.in
-
-SUBDIRS = widgets
-
-billreminder_guidir = $(pythondir)/billreminder/gui
-billreminder_gui_PYTHON = \
-	__init__.py \
-	aboutdialog.py \
-	adddialog.py \
-	categoriesdialog.py \
-	maindialog.py \
-	prefdialog.py
-
